| Bug #10246 | Parser: bad syntax for GRANT EXECUTE | ||
|---|---|---|---|
| Submitted: | 28 Apr 2005 23:21 | Modified: | 31 May 2005 3:59 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.6-beta-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Bugs System | Target Version: | |
[16 May 2005 1:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24920
[16 May 2005 1:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24921
[16 May 2005 1:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24922
[16 May 2005 1:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24923
[17 May 2005 20:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24986
[17 May 2005 22:31]
Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
[31 May 2005 3:59]
Paul DuBois
Noted in 5.0.6 changelog, GRANT section, and grant table structure section.

Description: MySQL currently allows: GRANT EXECUTE ON routine_name ... This is ambiguous, because there are two kinds of routines stored procedures and functions), and someday MySQL might have execute privileges for other objects too (e.g. packages). Therefore MySQL must require: GRANT EXECUTE ON { PROCEDURE | FUNCTION } routine_name ... and REVOKE EXECUTE ON {PROCEDURE | FUNCTION } routine_name ... This would be closer to the ANSI/ISO standard too. No change is necessary for GRANT EXECUTE ON database_name.* ... No support is necessary for GRANT EXECUTE ON ROUTINE ... How to repeat: mysql> create procedure p79 () set @a=5; Query OK, 0 rows affected (0.03 sec) mysql> create function p79 () returns int return 5; Query OK, 0 rows affected (0.00 sec) mysql> grant execute on p79 to m; Query OK, 0 rows affected (0.03 sec) mysql> grant execute on function p79 to m; ERROR 1064 (42000): You have an error in your SQL syntax ... Suggested fix: